scrollIndicator z-index bug

--- a/src/Components/UI/ScrollIndicator/ScrollIndicator.module.css
+++ b/src/Components/UI/ScrollIndicator/ScrollIndicator.module.css
@@ -10,7 +10,7 @@
     left: 50%;
     margin-left: -13px;
     cursor: pointer;
-    z-index: 9999;
+    z-index: 100;
 }
 
 .mouse span {
